force-app/main/default/objects/ampi__IATI_Sector__c/ampi__IATI_Sector__c.object-meta.xml
<CustomObject>
    <description>Custom object to track the catalog IATI-relevant sectors that can be added to Amp projects</description>
    <label>IATI Sector</label>
    <nameField>
        <label>Sector</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IATI Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>