force-app/main/default/objects/ampi__IATI_Sector__c/fields/ampi__DAC_3_Digit_Sector_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__DAC_3_Digit_Sector_Code__c</fullName>
    <description>This picklist field tracks the DAC 3 Digit Sector Code associated with this sector record.</description>
    <inlineHelpText>Select the DAC 3 Digit Sector Code associated with this sector, based on the IATI Standards: http://iatistandard.org/201/codelists/SectorCategory/</inlineHelpText>
    <label>DAC 3 Digit Sector Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>114</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>122</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>151</fullName>
            </value>
            <value>
                <fullName>152</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>231</fullName>
            </value>
            <value>
                <fullName>232</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>234</fullName>
            </value>
            <value>
                <fullName>235</fullName>
            </value>
            <value>
                <fullName>236</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>311</fullName>
            </value>
            <value>
                <fullName>312</fullName>
            </value>
            <value>
                <fullName>313</fullName>
            </value>
            <value>
                <fullName>321</fullName>
            </value>
            <value>
                <fullName>322</fullName>
            </value>
            <value>
                <fullName>323</fullName>
            </value>
            <value>
                <fullName>331</fullName>
            </value>
            <value>
                <fullName>332</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>