force-app/main/default/objects/ampi__IATI_Sector__c/fields/ampi__DAC_5_Digit_Sector_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__DAC_5_Digit_Sector_Code__c</fullName>
    <description>This picklist field tracks the DAC 5 Digit Sector that is related to this sector record.</description>
    <inlineHelpText>Select the DAC 5 Digit Sector related to this sector record, based on the IATI standard: http://iatistandard.org/201/codelists/Sector/</inlineHelpText>
    <label>DAC 5 Digit Sector Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15151</fullName>
            </value>
            <value>
                <fullName>15161</fullName>
            </value>
            <value>
                <fullName>23081</fullName>
            </value>
            <value>
                <fullName>23181</fullName>
            </value>
            <value>
                <fullName>23010</fullName>
            </value>
            <value>
                <fullName>23110</fullName>
            </value>
            <value>
                <fullName>23082</fullName>
            </value>
            <value>
                <fullName>23182</fullName>
            </value>
            <value>
                <fullName>23050</fullName>
            </value>
            <value>
                <fullName>23640</fullName>
            </value>
            <value>
                <fullName>23066</fullName>
            </value>
            <value>
                <fullName>23260</fullName>
            </value>
            <value>
                <fullName>15160</fullName>
            </value>
            <value>
                <fullName>15162</fullName>
            </value>
            <value>
                <fullName>23065</fullName>
            </value>
            <value>
                <fullName>23220</fullName>
            </value>
            <value>
                <fullName>43040</fullName>
            </value>
            <value>
                <fullName>43042</fullName>
            </value>
            <value>
                <fullName>23067</fullName>
            </value>
            <value>
                <fullName>23230</fullName>
            </value>
            <value>
                <fullName>60010</fullName>
            </value>
            <value>
                <fullName>15123</fullName>
            </value>
            <value>
                <fullName>91010</fullName>
            </value>
            <value>
                <fullName>11430</fullName>
            </value>
            <value>
                <fullName>31164</fullName>
            </value>
            <value>
                <fullName>31165</fullName>
            </value>
            <value>
                <fullName>31194</fullName>
            </value>
            <value>
                <fullName>31120</fullName>
            </value>
            <value>
                <fullName>31181</fullName>
            </value>
            <value>
                <fullName>31166</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>