force-app/main/default/objects/ampi__IATI_Sector__c/fields/ampi__Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__Vocabulary__c</fullName>
    <description>The vocabulary field tracks what is the source of sector classification code / vocabulary used.</description>
    <inlineHelpText>Select the source of this sector.</inlineHelpText>
    <label>Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OECD DAC CRS Purpose Codes (5 digit)</fullName>
            </value>
            <value>
                <fullName>OECD DAC CRS Purpose Codes (3 digit)</fullName>
            </value>
            <value>
                <fullName>Classification of the Functions of Government (UN)</fullName>
            </value>
            <value>
                <fullName>Statistical classification of economic activities in the European Community</fullName>
            </value>
            <value>
                <fullName>National Taxonomy for Exempt Entities (USA)</fullName>
            </value>
            <value>
                <fullName>AidData</fullName>
            </value>
            <value>
                <fullName>SDG Goal</fullName>
            </value>
            <value>
                <fullName>SDG Target</fullName>
            </value>
            <value>
                <fullName>SDG Indicator</fullName>
            </value>
            <value>
                <fullName>Humanitarian Global Clusters (Inter-Agency Standing Committee)</fullName>
            </value>
            <value>
                <fullName>Reporting Organization</fullName>
            </value>
            <value>
                <fullName>Reporting Organization 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>