force-app/main/default/objects/ampi__IATI_Sector__c/fields/ampi__Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Vocabulary_URI__c</fullName>
    <description>The URI where this vocabulary is defined. If the vocabulary is 99 or 98 (reporting organisation), the URI where this internal vocabulary is defined. While this is an optional field it is STRONGLY RECOMMENDED that all publishers use it to ensure that the meaning of their codes are fully understood by data users. This value must be of type xsd:anyURI.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>